[package]
name = "lang_rain"
version = "0.1.0"
edition = "2021"

[lib]
name = "lang_rain"
crate-type = ["cdylib"]

[dependencies]
langchain-rust = "4.6.0"
pyo3 = { version = "0.27.1" ,features = ["extension-module"] }
reqwest = {  version = "0.12",features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
pythonize = "0.27.0"
once_cell = "1.19"
thiserror = "1.0"
